--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ altair==5.2.0
 asn1crypto==1.5.1
 attrs==23.2.0
 Authlib==1.3.0
+beautifulsoup4==4.12.3
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2024.2.2
@@ -9,31 +10,48 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==2.2.1
+contourpy==1.2.0
 cryptography==41.0.7
+cycler==0.12.1
+entrypoints==0.4
+extra-streamlit-components==0.1.70
+Faker==23.2.1
+favicon==0.7.0
 filelock==3.13.1
+fonttools==4.49.0
 gitdb==4.0.11
 GitPython==3.1.41
+htbuilder==0.6.2
 idna==3.6
 importlib-metadata==7.0.1
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jwt==1.3.1
+kiwisolver==1.4.5
+lxml==5.1.0
+Markdown==3.5.2
 markdown-it-py==3.0.0
+markdownlit==0.0.7
 MarkupSafe==2.1.5
+matplotlib==3.8.3
 mdurl==0.1.2
+more-itertools==10.2.0
 numpy==1.26.4
 packaging==23.2
 pandas==2.2.0
 pillow==10.2.0
 platformdirs==3.11.0
+prometheus_client==0.20.0
 protobuf==4.25.2
 pyarrow==15.0.0
 pycparser==2.21
 pydeck==0.8.1b0
 Pygments==2.17.2
 PyJWT==2.8.0
+pymdown-extensions==10.7
 pyOpenSSL==23.3.0
+pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2024.1
 PyYAML==6.0.1
@@ -41,12 +59,25 @@ referencing==0.33.0
 requests==2.31.0
 rich==13.7.0
 rpds-py==0.17.1
+ruff==0.2.2
 six==1.16.0
 smmap==5.0.1
 snowflake-connector-python==3.7.0
 snowflake-snowpark-python==1.12.0
 sortedcontainers==2.4.0
-streamlit==1.31.0
+soupsieve==2.5
+st-annotated-text==4.0.1
+streamlit==1.33.0
+streamlit-camera-input-live==0.2.0
+streamlit-card==1.0.0
+streamlit-cookies-manager==0.2.0
+streamlit-embedcode==0.1.2
+streamlit-extras==0.4.0
+streamlit-faker==0.0.3
+streamlit-image-coordinates==0.1.6
+streamlit-keyup==0.2.3
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==2.5.5
 tenacity==8.2.3
 toml==0.10.2
 tomlkit==0.12.3
